correct alignment problem

--- a/style.css
+++ b/style.css
@@ -13,12 +13,8 @@ body {
 }
 #header {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
-  
-  background-size: fill;
-  background-position: right;
-  background-repeat: no-repeat;
 }
 .container {
   padding: 10px 10%;
@@ -28,6 +24,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 nav .nav_text {
   color: #b547b5;
@@ -71,16 +68,25 @@ nav ul li a:hover::after {
 .header_text h1 span {
   color: #ff004f;
 }
+.banner_img img {
+height: 100%;
+width: 100%;
+}
 
 .text_cotainer{
   display: flex;
-  justify-content: space-between;
+  justify-content:space-between;
 
 }
 /*-----------------------------about-----------------------*/
 #about {
   padding: 80px 0;
   color: #ababab;
+}
+
+
+.about_text{
+margin-top:10px;
 }
 .row {
   display: flex;
@@ -365,12 +371,17 @@ nav .icon {
 
 /* ----------------------css for small screen-------- */
 @media only screen and (max-width: 668px) {
-  #header {
-    background-image: url('./images/Nadim.png');
+
+  .header{
+    margin: 5px;
   }
+ .container{
+  margin: 5px;
+ }
   .header_text {
-    margin-top: 100%;
+
     font-size: 16px;
+    color: cornflowerblue;
   }
   .header_text h1 {
     font-size: 30px;
@@ -400,8 +411,20 @@ nav .icon {
     left: 25px;
     cursor: pointer;
   }
+
+  .text_cotainer{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    
+  
+  }
+  .about_text{
+margin: 5px;
+  }
   .sub_title {
     font-size: 40px;
+    text-align: center;
   }
   .about_col_1,
   .about_col_2 {
